--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,16 @@ spring.servlet.multipart.max-request-size=10MB
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
+spring.datasource.url=jdbc:mysql://localhost:3306/project?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=flame
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=10
+
+mybatis.mapper-locations=classpath*:mapper/*.xml
+mybatis.type-aliases-package=com.ha.ltschat.model
+
+
+cors.allowed.origins=http://localhost:4200
+cors.allowed.methods=GET,POST,PUT,DELETE
