--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,4 @@ mybatis.type-aliases-package=com.ha.ltschat.model
 
 cors.allowed.origins=http://localhost:4200
 cors.allowed.methods=GET,POST,PUT,DELETE
+spring.mvc.hiddenmethod.filter.enabled=true
