--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,21 @@
             <artifactId>jjwt-jackson</artifactId>
             <version>0.11.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-storage-blob</artifactId>
+            <version>12.14.1</version>
+        </dependency>
     </dependencies>
 
     <build>
