--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,15 @@
             <artifactId>azure-storage-blob</artifactId>
             <version>12.14.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20210307</version>
+        </dependency>
     </dependencies>
 
     <build>
